rewrite lib module with coroutine
1. now passes all tests
2. the lib needs more checks
3. some poc code not re-checked yet